# car-shop

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  pyproject.toml
car_shop/: asgi.py  settings.py  urls.py  wsgi.py
carro/: admin.py  models.py
carro/migrations/: 0001_initial.py
categorias/: admin.py  models.py
categorias/migrations/: 0001_initial.py
empresa/: admin.py  models.py
empresa/migrations/: 0001_initial.py  0002_alter_empresamodels_facebook_empresa_and_more.py  0003_alter_empresamodels_facebook_empresa_and_more.py
paginas/: admin.py  models.py  urls.py  views.py
paginas/migrations/: 0001_initial.py  0002_alter_funcionariomodels_options.py  0003_alter_sobrenosmodels_nome_sobre_nos.py
paginas/templates/estoque/: carro_detalhes.html  index.html
paginas/templates/home/: index.html
paginas/templates/sobre_nos/: index.html
paginas/templatetags/: filters.py
static/tromic/: 404.html  about.html  blog-detail.html  blog.html  checkout.html  contact.html  index-2.html  index.html  login-register.html  shop-grid-fullwidth.html  shop-list-fullwidth.html  shop-list-right-sidebar.html  shop.html  single-product-affiliate.html  single-product-group.html  single-product-variable.html  single-product.html
templates/: base.html
templates/admin/: base_site.html
templates/static/css/: admin_jmcars.css
templates/static/tromic/: about.html  blog-listview.html  blog.html  cart.html  checkout.html  compare.html  faq.html  login-register.html  my-account.html  shop-list-fullwidth.html  shop-right-sidebar.html  (+6 more)
utils/: utils.py
(+57 files in other folders)
